changed size of profile photo and linked it to css via an id class

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -5,6 +5,11 @@
     text-align: center;
 }
 
+#small-profile-photo {
+    height: 100px;
+    width: 100px;
+}
+
 body {
     background-color: #FFFDFA;
     text-align: center; 
