--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,8 +1,19 @@
 .banner {
     background-color: rgb(231, 94, 174);
     color: black;
-    margin-top: 75px;
     text-align: center;
+    padding: 10px 0;
+    font-family: 'cursive';
+    font-size: 18px;
+}
+
+.menu {
+    background-color:rgb(231, 94, 174);
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    font-family: 'cursive';
+    font-size: 18px;
 }
 
 #small-profile-photo {
@@ -13,15 +24,19 @@
 body {
     background-color: #FFFDFA;
     text-align: center; 
+    font-size: 14px;
+    font-family: 'cursive';
 }
 h1 {
     color: rgb(0, 0, 0);
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
+    font-family: 'cursive';
+    ;
 }
 p {
     color: rgb(0, 0, 0);
     text-align: center;
-    font-family: Arial, sans-serif;
     font-size: 16px;
+    font-family: 'cursive';
 }
