--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -11,7 +11,7 @@
     background-color:rgb(231, 94, 174);
     color: white;
     text-align: center;
-    padding: 10px 0;
+    padding: 10px 100px;
     font-family: 'cursive';
     font-size: 18px;
 }
