--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -10,6 +10,17 @@ header {
     padding: 20px;
 }
 
+nav {
+    padding: 10px 10px 10px 1000px;
+}
+
+li {
+    padding: 10px;
+    border: 2px solid;
+    border-radius: 5px;
+    background-color: #FFFDFA;
+}
+
 #small-profile-photo {
     height: 100px;
     width: 100px;
