--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,22 +1,41 @@
 * {
-    box-sizing: content box;
+}
+
+body {
     background-color: #FFFDFA;
+    margin: 0 auto;
+}
+
+head {
+    margin: 20px;
+    padding: 20px;
+    box-sizing: content-box;
+    position: static;
+    width: 100%;
 }
 
 header {
-    margin: 20px;
-    padding: 20px;
+    position: static;
+    width: 100%;
+    text-align: right;
 }
 
 nav {
     padding: 10px 10px 10px 1000px;
 }
 
+ul {
+    padding: 10px;
+}
 li {
     padding: 10px;
     border: 2px solid;
     border-radius: 5px;
     background-color: #FFFDFA;
+}
+
+li:hover {
+
 }
 
 #small-profile-photo {
@@ -35,11 +54,14 @@ li {
 }*/
 
 .fixed-column {
+    position: fixed;
+    align-content: left;
     padding: 40px auto;
-    margin: 40px;
+    margin: 10000px, 20px, 20px, 20px;
 }
 
 .scrollable-column {
+    align-content: right; 
     padding: 40px auto;
     margin 40px;
 }
