--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -3,29 +3,25 @@
 
 body {
     background-color: #FFFDFA;
-    margin: 0 auto;
 }
 
 head {
-    margin: 20px;
-    padding: 20px;
-    box-sizing: content-box;
-    position: static;
-    width: 100%;
+  /* irrelevant for style contains mostly links and meta data */
 }
 
 header {
+    margin: 30px;
+    padding: 30px 30px 30px 800px;
+    box-sizing: content-box;
     position: static;
-    width: 100%;
-    text-align: right;
 }
 
 nav {
-    padding: 10px 10px 10px 1000px;
+  
 }
 
 ul {
-    padding: 10px;
+ 
 }
 li {
     padding: 10px;
@@ -55,15 +51,14 @@ li:hover {
 
 .fixed-column {
     position: fixed;
-    align-content: left;
-    padding: 40px auto;
-    margin: 10000px, 20px, 20px, 20px;
+    padding: 100px;
+    margin: 500px, 100px, 100px, 100px;
 }
 
 .scrollable-column {
-    align-content: right; 
-    padding: 40px auto;
-    margin 40px;
+    position: relative; 
+    margin: 30px;
+    padding: 30px 30px 30px 800px;
 }
 
 h1 {
