--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,24 +1,14 @@
-* {
-}
-
 body {
     background-color: #FFFDFA;
 }
 
-head {
-  /* irrelevant for style contains mostly links and meta data */
-}
-
 header {
-    margin: 30px;
-    padding: 30px 30px 30px 800px;
+    margin: 20px;
+    padding: 20px 20px 20px 800px;
     box-sizing: content-box;
     position: static;
-    
-}
-
-nav {
-  
+    font-family: serif;
+    font-size: 20px;
 }
 
 ul.header {
@@ -55,29 +45,35 @@ li.header {
 
 .fixed-column {
     position: fixed;
-    padding: 100px;
-    margin: 500px, 100px, 100px, 100px;
+    padding: 50px 1000px 50px 100px;
+    font-family: serif;
 }
 
 .scrollable-column {
     position: relative; 
-    margin: 30px;
+    margin: 30px 10px 10px 10px;
     padding: 30px 30px 30px 500px;
+    font-family: serif;
 }
 
 h1 {
     color: rgb(0, 0, 0);
-    font-size: 18px;
-    font-family: 'cursive', serif;
+    font-size: 20px;
 }
 
 p {
     color: rgb(0, 0, 0);
-    font-size: 16px;
-    font-family: 'cursive', serif;
+    font-size: 18px;
+    text-align: justify;
 }
 
 
 li { /*listing contact info and other non-header lists*/
     padding: 10px;
+    display: block;
+}
+
+footer {
+    font-family: serif;
+    padding: 100px;
 }
