--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -76,4 +76,42 @@ li { /*listing contact info and other non-header lists*/
 footer {
     font-family: serif;
     padding: 100px;
+    bottom: 0px;
+}
+
+/* Pong page header and canvas css*/
+.pongbody {
+    background: pink;
+}
+
+.pongheader {
+    margin: 20px;
+    padding: 20px 20px 20px 800px;
+    box-sizing: content-box;
+    position: static;
+    font-family: serif;
+    font-size: 20px;
+}
+
+.pongul {
+    display: flex;
+    list-style: none;
+}
+
+.pongli {
+    padding: 10px;
+    margin: 20px;
+    border: 2px solid;
+    border-radius: 5px;
+    background-color: #FFFDFA;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: var(--medium-spacing);
+}
+
+.pongcanvas {
+    width: 100%;
+    position: fixed;
 }
