--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -49,6 +49,19 @@ li.header {
     font-family: serif;
 }
 
+.button {
+    padding: 10px;
+    margin: 20px;
+    border: 2px solid;
+    border-radius: 5px;
+    background-color: #FFFDFA;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: var(--medium-spacing);
+}
+
 .scrollable-column {
     position: relative; 
     margin: 30px 10px 10px 10px;
