changed profile photo from id to class because it isn't loading well from github pages to the web

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -42,7 +42,7 @@ li.header {
     gap: var(--medium-spacing);
 }
 
-#small-profile-photo {
+.smallProfilePhoto {
     height: 100px;
     width: 100px;
 }
